--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.14.0",
     "firebase-tools": "^11.16.1",
     "graphql": "15.8.0",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "next": "13.0.2",
@@ -33,7 +34,15 @@
     "react-highlight-words": "^0.18.0",
     "react-images-upload": "^1.2.8",
     "styled-components": "^5.3.6",
-    "tailwindcss": "^3.2.6"
+    "tailwindcss": "^3.2.6",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
+    "cors": "^2.8.5",
+    "jose": "^4.8.3",
+    "js-cookie": "^3.0.1"
+   
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.2",
