--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "3.5.10",
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/lodash": "^4.14.189",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -29,18 +30,19 @@
     "firebase": "^9.14.0",
     "firebase-tools": "^11.16.1",
     "graphql": "^16.7.1",
-    "jose": "^4.8.3",
-    "js-cookie": "^3.0.1",
-    "jsonwebtoken": "^9.0.1",
+    "jose": "^4.13.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
-    "next": "12.2.3",
+    "next": "13.2.4",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.18.0",
     "react-images-upload": "^1.2.8",
+    "react-redux": "^8.1.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.6"
   },
