--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "next": "13.2.4",
+    "nodemailer": "^6.9.4",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
