--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "@types/react-highlight-words": "^0.16.4",
-    "antd": "4.17.4",
+    "antd": "^5.7.2",
     "apollo-server-micro": "^3.12.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
@@ -49,6 +49,10 @@
     "tailwindcss": "^3.2.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.8",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
